--- a/modules/ui-module/src/main/resources/manager/index.html
+++ b/modules/ui-module/src/main/resources/manager/index.html
@@ -77,6 +77,9 @@
 			height: 100%;
 		}
 	</style>
+	<script>
+		window.csrfToken = '{{ csrfToken }}';
+	</script>
 </head>
 
 <body class="d-flex flex-column h-100 m-0">
